--- a/src/app/components/viewdetails/viewdetails.component.html
+++ b/src/app/components/viewdetails/viewdetails.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" id="details">
             <div class="col-md-4 first">
                 <div id="imageZoom" style="--url: url(../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg);
                 --zoom-x: 0%; --zoom-y: 0%;
@@ -24,6 +24,10 @@
                 </div>
             </div>
             <div class="col-md-4 third">
+                <div class="profile" routerLink="/seller-account">
+                    <img src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
+                    <h5>jackFashion</h5>
+                </div>
                 <div class="head">
                     <h5>Regular Fit Modal-blend resort shirt</h5>
                     <p>EGP 2499.00</p>
