--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,35 +1,40 @@
 
-    <section style="height: 80px;">
-        <div class="container my-0">
-            <div class="row">
+    <section>
+        <div class="container">
+            <div class="row d-flex align-items-center justify-content-center text-center p-0 ">
+                <div class="col-md-4 col-12 anch">
                     <a href="">
                         <div>
                             <p>Free delivery on all orders above EGP 1999</p>
                         </div>
                     </a>
+                </div>
+                <div class="col-md-4 col-12 anch">
                     <a href="">
                         <div>
                             <p>Free returns available online and in store</p>
                         </div>
                     </a>
+                </div>
+                <div class="col-md-4 col-12 anch">
                     <a href="">
                         <div>
                             <p>Shop online 24/7</p>
                         </div>
                     </a>
+                </div>
             </div>
         </div>
     </section>
     
-    <section>
-        <div class="container " >
+    <section> 
+        <div class="container">
             <div class="row">
-                <!-- <div class="col-md-1"></div> -->
-                <div class="col-md-12">
+                <div class="col-md-12 col-12">
                     <owl-carousel-o [options]="offerSilder">
                                 <ng-template carouselSlide> 
                                     <img height="auto" width="100%" src="../../../assets/images/remy_loz-VfVCv53bqdw-unsplash.jpg" alt="">
-                                    <div class="contText">
+                                    <div class="contText d-flex flex-column align-items-center text-center top-50 start-50 translate-middle position-absolute ">
                                         <h2>Get your Offers</h2> 
                                         <h3>Relaxed Fit High shorts</h3>
                                         <button class="btn btn-dark">Shop Now</button>
@@ -37,7 +42,7 @@
                                 </ng-template>
                                 <ng-template carouselSlide> 
                                     <img height="auto" width="100%" src="../../../assets/images/walter-randlehoff-p-08ZLDt9y4-unsplash.jpg" alt=""> 
-                                    <div class="contText">
+                                    <div class="contText d-flex flex-column align-items-center text-center top-50 start-50 translate-middle position-absolute ">
                                         <h2>Get your Offers</h2> 
                                         <h3>Resort shirt Relaxed fit</h3>
                                         <button class="btn btn-default">Shop Now</button>
@@ -45,7 +50,7 @@
                                 </ng-template>
                                 <ng-template carouselSlide> 
                                     <img height="auto" width="100%" src="../../../assets/images/25041.jpg" alt=""> 
-                                    <div class="contText">
+                                    <div class="contText d-flex flex-column align-items-center text-center top-50 start-50 translate-middle position-absolute ">
                                         <h2>Get your Offers</h2>
                                         <h3>Relaxed Fit Linen-blend shorts</h3>
                                         <button class="btn btn-dark">Shop Now</button>
@@ -53,7 +58,6 @@
                                 </ng-template>
                             </owl-carousel-o>
                 </div>
-                <!-- <div class="col-md-1"></div> -->
             </div>
         </div>
     </section>
