--- a/src/app/components/viewdetails/viewdetails.component.scss
+++ b/src/app/components/viewdetails/viewdetails.component.scss
@@ -60,6 +60,59 @@
 }
 
 ///////////////////////////////////
+/// 
+
+
+
+
+
+// .row .first .colum .container-img .profile:hover{
+//     img{
+//         width: 34px;
+//         height: 34px;
+//         border: 1px solid black;
+//     }
+//     h5{
+//     font-weight:900;
+//     text-decoration:underline;
+//     }
+// }
+
+// .row .first .colum .container-img .profile h5{
+//     font-weight: 700;
+//     font-size: 1rem;
+//     margin-top: 5px;
+//     color: black;
+// }
+
+
+.third .profile{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.third .profile img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.third .profile h5{
+    font-weight: 700;
+    font-size: 1.75rem;
+    color: black;
+    opacity: 0.6;
+    text-decoration: underline;
+    cursor: pointer;
+}
+.third .profile h5:hover{
+    opacity: 1;
+}
+
+
 .third .head{
     display: flex;
     flex-direction: column;
