--- a/src/app/components/viewdetails/viewdetails.component.html
+++ b/src/app/components/viewdetails/viewdetails.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container-fluid">
         <div class="row" id="details">
-            <div class="col-md-4 first">
+            <div class="col-md-4 first" *ngIf="productDetails">
                 <div id="imageZoom" style="--url: url(../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg);
                 --zoom-x: 0%; --zoom-y: 0%;
                 --display:none; 
