--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -47,7 +47,7 @@
                             <p>Inclusive of VAT</p>
                         </div>
                     </div>
-                    <button style="border-radius: 0;" class="btn btn-dark  w-100 ">CONTINUE TO CHECKOUT</button>
+                    <a href="/address"><button style="border-radius: 0;" class="btn btn-dark  w-100 ">CONTINUE TO CHECKOUT</button></a>
                     <hr>
                     <div class="check">
                         <h6>Checkout quickly and securely with</h6>
