--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <button>Continue to Checkout</button>
+        <a href="/address"><button>Continue to Checkout</button></a>
 
         <div class="visa">
             <p>Checkout quickly and securely with</p>
