--- a/src/app/components/seller-account/seller-account.component.scss
+++ b/src/app/components/seller-account/seller-account.component.scss
@@ -118,3 +118,54 @@
 
 
 
+
+
+
+.title {
+    position: relative; 
+}
+
+.dropdown {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    position: absolute; 
+    top: 40px; 
+    left: 320px; 
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000; 
+    display: none; 
+    border-radius: 5px;
+    width: auto;
+    text-align: center;
+    max-height: 0; 
+    overflow: hidden; 
+    opacity: 0; 
+    transition: max-height 0.3s ease, opacity 0.3s ease;
+}
+
+.dropdown li {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.dropdown li:hover {
+    background-color: #f0f0f0;
+}
+
+
+.show-dropdown .dropdown {
+    display: block; 
+    transition: 0.3s ease-in-out;
+    max-height: 300px; 
+    opacity: 1; 
+}
+
+
+
+.header .title .dropdown li a{
+    text-decoration: none;
+    color: black;
+}
