--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -114,8 +114,8 @@
             <div class="row">
                 <div class="col-md-12 first">
                     <div class="colum">
-                        <div class="container-img" > 
-                            <img routerLink="/viewdetails" src="../../../assets/images/ben-mcleod-O-WdR304HnM-unsplash.jpg" alt="">
+                        <div class="container-img" *ngFor="let item of categoryName"> 
+                            <img routerLink="/viewdetails" [src]="item?.image" alt="">
                             <div class="icon">
                                 <svg  width="40" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
@@ -124,9 +124,10 @@
                                 <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="currentColor"/>
                                 </svg>
                             </div>
-                            <div class="profile" routerLink="/seller-account">
-                                <img src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
-                                <h5>jackFashion</h5>
+                            <!-- <div class="profile" routerLink="/seller-account/{{item.shopId}}"> -->
+                            <div class="profile" (click)="getShop(item.shopId)">
+                                <img [src]="item.shopImage" alt="">
+                                <h5>{{item.shopName}}</h5>
                             </div>
                         </div>
                         <div class="container-img" >
