--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -128,11 +128,13 @@
 }
 .row .first{
     display: flex;
+    flex-wrap: nowrap;
     gap: 25px;
 }
 .row .first .colum{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 25px;
     width: 100%;
 }
