--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -6,34 +6,21 @@
             <hr>
         </div>
         <div  class="row" >
-            <div class="col-md-3 first"  >
-                <owl-carousel-o class="fav"  [options]="imgSlider" >
+            <div class="col-md-3 first"  *ngFor="let item of favUsr">
+                <owl-carousel-o class="fav"  [options]="imgSlider"  >
                     <ng-template carouselSlide>
                         <div class="productimg">
-                            <img  class="carouselSlide" src="../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg" alt="">
-                            
+                            <img  class="carouselSlide" [src]="item.productImage" alt="">
                         </div>
-                    </ng-template>  
-                    <ng-template carouselSlide>
-                        <div class="productimg">
-                            <img  src="../../../assets/images/alberto-cognetti-GfkIiqcNn5k-unsplash.jpg" alt="">
-
-                        </div>
-                    </ng-template>  
-                    <ng-template carouselSlide>
-                        <div class="productimg">
-                            <img  src="../../../assets/images/ben-mcleod-O-WdR304HnM-unsplash.jpg" alt="">
-                            
-                        </div>
-                    </ng-template>  
+                    </ng-template>   
                 </owl-carousel-o>
                 <div class="description">
-                    <h2>Lorem, ipsum dolor.</h2>
-                    <p>$ 49.00</p>
+                    <h2> {{item.productName}} </h2>
+                    <p>$ {{item.price}} </p>
                 </div>
                 <div class="addtobasket">
-                    <button class="btn btn-dark">ADD TO CART </button>
-                    <button class="btn btn-danger .col-6">Remove </button>
+                    <button (click)="addProdCart(item.productId, UId)" class="btn btn-dark">ADD TO CART </button>
+                    <button #btnremove (click)="removFav(item.favoriteId, btnremove)" class="btn btn-danger .col-6">Remove </button>
                 </div>
             </div>
             <div class="col-md-3"></div>
