--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,9 +2,12 @@
 .footer{
     background-color: #e4e4e4;
     padding: 70px 0;
-    margin-top: 30px;
+    margin-top: auto;
+    display: block;
     position: sticky;
     top: 100%;
+    bottom: 0;
+    flex-shrink: 0;
 }
 .container{
     max-width: 1170px;
