--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,10 @@ body{
     box-sizing: border-box;
     font-family: "HM Sans Regular","HM Sans Arabic Regular","sans-serif","Arial";
     min-height: 100vh;
-    background-color: #faf9f8
+    background-color: #faf9f8;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .isActive{
